--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 
@@ -10,7 +8,7 @@
 # production
 /build
 
-# debug
+# debug logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -18,6 +16,10 @@ yarn-error.log*
 
 # env files
 .env*
+*.env.local
+*.env.development.local
+*.env.test.local
+*.env.production.local
 
 # vercel
 .vercel
@@ -25,3 +27,35 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# python - ML related
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.pkl
+*.h5
+*.joblib
+*.onnx
+
+# Jupyter notebooks checkpoints
+.ipynb_checkpoints
+
+# ML datasets & large files
+ml/data/
+ml/datasets/
+*.zip
+*.tar
+*.tar.gz
+
+# Model training outputs
+ml/models/
+ml/checkpoints/
+ml/runs/        # if using tensorboard
+ml/outputs/
+
+# virtual environments
+venv/
+.env/
+.venv/
+env/
