--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "multer": "^2.0.2",
     "next": "14.2.16",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.9",
     "react": "^18",
     "react-day-picker": "9.8.0",
     "react-dom": "^18",
